# Bin-Paking-Algorithm

./: .gitignore  CMakeLists.txt
MyPacking/: FileManager.cpp  FileManager.h  PackManager.cpp  binPackingAlgorithm.h  glDraw.cpp
TestData/: 20220829_070210.txt  20220829_070210_sort_by_side.txt
